# DriveChill

./: .dockerignore  .gitignore  AUDIT.md  CHANGELOG.md  DriveChill.sln  LICENSE  PLAN.md  README.md
backend/: drivechill.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  mqtt_telemetry.py  tray.py
backend/app/api/: websocket.py
backend/app/db/: migration_runner.py
backend/app/hardware/: __init__.py  base.py  hwmon_backend.py  lhm_backend.py  lhm_direct_backend.py  liquidctl_backend.py  lm_sensors_backend.py  mock_backend.py
backend/tests/: conftest.py  test_alert_cooldown.py  test_alert_profile_switching.py  test_analytics_bugfix.py  test_analytics_contract.py  test_analytics_cross_backend_parity.py  test_analytics_downsampling.py  test_analytics_perf.py  test_api_contracts.py  test_api_key_scopes.py  test_api_keys.py  test_audit_gaps.py  test_auth.py  test_auth_http.py  test_backup_restore.py  test_composite_curves.py  test_drive_monitoring.py  test_drives_parity.py  test_drives_routes.py  test_event_annotations.py  test_fan_service_startup_safety.py  test_fan_settings.py  test_ha_discovery.py  test_hwmon_backend.py  test_ip_pinning_transport.py  test_liquidctl_backend.py  test_machine_registry.py  test_machines_routes.py  test_migration_backup.py  test_mqtt_commands.py  test_mqtt_telemetry.py  test_noise_profiles.py  test_notification_channel_service.py  test_notification_routes.py  test_profile_import_export.py  test_profile_schedules.py  test_ramp_rate.py  test_release_gates.py  test_report_schedules.py  test_security_regressions.py  (+11 more)
(+374 files in other folders)
